ADD_EXECUTABLE(rose rose.cpp)
TARGET_LINK_LIBRARIES(rose ${COMMON_LIBRARIES})
ADD_EXECUTABLE(roseTable roseTable.cpp)
TARGET_LINK_LIBRARIES(roseTable ${COMMON_LIBRARIES})
#ADD_LIBRARY(referential algebra.c dml.c)
#SET(COMMON_LIBRARIES referential ${COMMON_LIBRARIES})
IF(CHECK_LIBRARY)
  ADD_TEST(rose rose)
#  CREATE_CHECK(${CMAKE_CURRENT_SOURCE_DIR}/rose.sh)
ENDIF(CHECK_LIBRARY)